syntax = "proto3";

option java_package = "zipkintrace.serviceb.grpc.servicec.generated";

package servicec;

service ServiceC {
    rpc callC (Empty) returns (Result);
}

message Empty {
}

message Result {
    int32 value = 1;
}